--- a/cubic-agent/pom.xml
+++ b/cubic-agent/pom.xml
@@ -13,6 +13,7 @@
 
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <tools_jar>${java.home}/../lib/tools.jar</tools_jar>
         <premain.class>com.cubic.agent.MatrixAgent</premain.class>
         <can.redefine.classes>true</can.redefine.classes>
