--- a/cubic-proxy-common/pom.xml
+++ b/cubic-proxy-common/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>cubic-proxy-common</artifactId>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>matrix.cubic</groupId>
