--- a/cubic-proxy/pom.xml
+++ b/cubic-proxy/pom.xml
@@ -46,11 +46,11 @@
 <!--        </dependency>-->
 
 <!--        &lt;!&ndash; druid &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>com.github.drtrang</groupId>-->
-<!--            <artifactId>druid-spring-boot2-starter</artifactId>-->
-<!--            <version>1.1.10.2</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.github.drtrang</groupId>
+            <artifactId>druid-spring-boot2-starter</artifactId>
+            <version>1.1.10.2</version>
+        </dependency>
 
         <!-- 持久层 -->
         <dependency>
