--- a/cubic-proxy/src/main/resources/application.yml
+++ b/cubic-proxy/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
       auto-commit: true
       maximum-pool-size: 20
       minimum-idle: 5
-      idle-timeout: 11
+      idle-timeout: 1800000
       max-lifetime: 1800000
       connection-timeout: 30000
 
