发布1.4.5.release 优化：   添加自定义ClassLoader,并且将agent核心代码剥离到单独jar包，确保agent代码和业务代码分别由不同Classloader 感谢 @hopelove404

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>matrix.cubic</groupId>
     <artifactId>cubic</artifactId>
     <packaging>pom</packaging>
-    <version>1.4.5-SNAPSHOT</version>
+    <version>1.4.5.release</version>
     <modules>
         <module>cubic-agent-core</module>
         <module>cubic-proxy</module>
