--- a/pom.xml
+++ b/pom.xml
@@ -33,34 +33,34 @@
             <dependency>
                 <groupId>matrix.cubic</groupId>
                 <artifactId>cubic-agent</artifactId>
-                <version>1.4.5-SNAPSHOT</version>
+                <version>1.4.5.release</version>
             </dependency>
             <dependency>
                 <groupId>matrix.cubic</groupId>
                 <artifactId>cubic-agent-core</artifactId>
-                <version>1.4.5-SNAPSHOT</version>
+                <version>1.4.5.release</version>
             </dependency>
             <dependency>
                 <groupId>matrix.cubic</groupId>
                 <artifactId>cubic-proxy</artifactId>
-                <version>1.4.5-SNAPSHOT</version>
+                <version>1.4.5.release</version>
             </dependency>
             <dependency>
                 <groupId>matrix.cubic</groupId>
                 <artifactId>cubic-proxy-common</artifactId>
-                <version>1.4.5-SNAPSHOT</version>
+                <version>1.4.5.release</version>
             </dependency>
 
             <dependency>
                 <groupId>matrix.cubic</groupId>
                 <artifactId>cubic-proxy-websocket</artifactId>
-                <version>1.4.5-SNAPSHOT</version>
+                <version>1.4.5.release</version>
             </dependency>
 
             <dependency>
                 <groupId>matrix.cubic</groupId>
                 <artifactId>cubic-serialization-protobuf</artifactId>
-                <version>1.4.5-SNAPSHOT</version>
+                <version>1.4.5.release</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
