修改默认登录用户密码123456 pom中加入share的包版本 修改前端调用地址ws为服务器地址

--- a/cubic-agent-core/pom.xml
+++ b/cubic-agent-core/pom.xml
@@ -80,7 +80,9 @@
 
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
+                <version>3.5.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
